# catradar

./: .gitignore  .pre-commit-config.yaml  LICENCE  README.md  arch.md  pyproject.toml
.github/workflows/: run-tests.yaml
bug-reports/: bug-report-carousel.md  bug-report-cursor-push.md  bug-report-resize.md
src/catradar/: __init__.py  __main__.py  borders_processor.py  canvas.py  common.py  grid_manager.py  gui.py  position_updater.py  positions_updater.py  utils.py  view.py
tests/: README.md  test_canvas.py  test_get_rotated_vector.py  test_grid_manager.py  test_is_segment_intersect.py  test_position_updater.py
tests/catradar/: test_example.py  test_grid_manager.py
