[project]
name = "catradar"
version = "0.1.0"
description = "Like flightradar but with cats"
authors = [
    { name = "Vadim Yakshigulov", email = "toadharvard@gmail.com" },
    { name = "Artem Demchenko", email = "artdem243@gmail.com" },
    { name = "Alexey Efremov", email = "dragonmail135159@gmail.com"}
]

dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pre-commit>=4.0.1",
    "pytest>=8.3.3",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/catradar"]
